src/objects/Commitment__c.object
<CustomObject>
    <fields>
        <fullName>Commitment_amount__c</fullName>
        <label>Commitment amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment_date__c</fullName>
        <label>Commitment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Commitments</relationshipLabel>
        <relationshipName>Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commitments</relationshipLabel>
        <relationshipName>Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Commitment</label>
    <nameField>
        <label>Commitment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>